; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/rpcrt4/extr_rpc_binding.c_RPCRT4_strdupWtoA.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/rpcrt4/extr_rpc_binding.c_RPCRT4_strdupWtoA.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CP_ACP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @RPCRT4_strdupWtoA(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %22

9:                                                ; preds = %1
  %10 = load i32, i32* @CP_ACP, align 4
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @WideCharToMultiByte(i32 %10, i32 0, i32 %11, i32 -1, i32* null, i32 0, i32* null, i32* null)
  store i32 %12, i32* %4, align 4
  %13 = call i32 (...) @GetProcessHeap()
  %14 = load i32, i32* %4, align 4
  %15 = call i32* @HeapAlloc(i32 %13, i32 0, i32 %14)
  store i32* %15, i32** %5, align 8
  %16 = load i32, i32* @CP_ACP, align 4
  %17 = load i32, i32* %3, align 4
  %18 = load i32*, i32** %5, align 8
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @WideCharToMultiByte(i32 %16, i32 0, i32 %17, i32 -1, i32* %18, i32 %19, i32* null, i32* null)
  %21 = load i32*, i32** %5, align 8
  store i32* %21, i32** %2, align 8
  br label %22

22:                                               ; preds = %9, %8
  %23 = load i32*, i32** %2, align 8
  ret i32* %23
}

declare dso_local i32 @WideCharToMultiByte(i32, i32, i32, i32, i32*, i32, i32*, i32*) #1

declare dso_local i32* @HeapAlloc(i32, i32, i32) #1

declare dso_local i32 @GetProcessHeap(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
